--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -19,10 +19,10 @@
               </a>                          
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">    
                 <div class="nav-item flex-column" aria-orientation="vertical">
-                  <button class="dropdown-item" id="nav-users-tab" data-bs-toggle="tab" data-bs-target="#nav-users" type="button" role="tab" aria-controls="nav-users" aria-selected="false" onclick="show_user_table()">
+                  <button class="dropdown-item" id="nav-users-tab" data-bs-toggle="tab" data-bs-target="#nav-users" type="button" role="tab" aria-controls="nav-users" aria-selected="false" onclick="showUserTable()">
                     {{ text_users }}
                   </button>                    
-                  <button class="dropdown-item" id="nav-roles-tab" data-bs-toggle="tab" data-bs-target="#nav-roles" type="button"  role="tab" aria-controls="nav-roles" aria-selected="false" onclick="show_role_table()">
+                  <button class="dropdown-item" id="nav-roles-tab" data-bs-toggle="tab" data-bs-target="#nav-roles" type="button"  role="tab" aria-controls="nav-roles" aria-selected="false" onclick="showRoleTable()">
                     Роли
                   </button>                  
                   <button class="dropdown-item">Настройки БД</button>                  
