--- a/views/template/common/footer.twig
+++ b/views/template/common/footer.twig
@@ -1,6 +1,10 @@
-<footer class="footer d-flex justify-content-center p-2">
-    <a href="https://eva.brainrs.com">EVA © 2023 Brain Retail Service LLC</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-    <!--<a href="https://eva.brainrs.com/documentation" target="_blank">Документация</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;-->
-    <a href="https://github.com/JetBrain2056">Repository GitHub</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-    <p>{{ text_version }}&nbsp;{{ Version }}_{{ lang }}</p>
+<footer class="footer d-sm-flex p-1">   
+    <div class="ms-1 col-6">   
+        <input class="text col-9" type="text" id="status"  disabled>   
+    </div>
+    <div class="">
+        <a href="https://eva.brainrs.com">EVA © 2023 Brain Retail Service LLC</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;        
+        <a href="https://github.com/JetBrain2056">Repository GitHub</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+        <span class="text">{{ text_version }}&nbsp;{{ Version }}_{{ lang }}</span>      
+    </div>
 </footer>
