--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -25,7 +25,8 @@
                   <button class="dropdown-item" id="nav-roles-tab" data-bs-toggle="tab" data-bs-target="#nav-roles" type="button"  role="tab" aria-controls="nav-roles" aria-selected="false" onclick="showRoleTable()">
                     Роли
                   </button>                  
-                  <button class="dropdown-item">Настройки БД</button>                  
+                  <button class="dropdown-item">Настройки БД</button>      
+                  <button class="dropdown-item">Лог</button>     
                 </div>
               </ul>              
             </li>         
