--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -10,12 +10,12 @@
           <ul class="nav navbar-nav align-items-center gap-2" id="nav-tab" role="tablist">                              
             <li class="nav-item">
                 <a class="nav-link active"  href="" id="nav-config-tab" data-bs-toggle="tab" data-bs-target="#nav-config"  role="tab" aria-controls="nav-config" aria-selected="false">
-                  Конфигурация
+                  {{ text_config }}
                 </a>
             </li>       
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="true">
-                Администрирование
+                {{ text_administration }}
               </a>                          
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">    
                 <div class="nav-item flex-column" aria-orientation="vertical">
@@ -23,10 +23,10 @@
                     {{ text_users }}
                   </button>                    
                   <button class="dropdown-item" id="nav-roles-tab" data-bs-toggle="tab" data-bs-target="#nav-roles" type="button"  role="tab" aria-controls="nav-roles" aria-selected="false" onclick="showRoleTable()">
-                    Роли
+                    {{ text_roles }}
                   </button>                  
-                  <button class="dropdown-item">Настройки БД</button>      
-                  <button class="dropdown-item">Лог</button>     
+                  {# <button class="dropdown-item">Настройки БД</button>       #}
+                  <button class="dropdown-item">{{text_log}}</button>     
                 </div>
               </ul>              
             </li>         
@@ -40,14 +40,14 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item" href="#">Справка</a>
+                  <a class="dropdown-item" href="#">{{ Help }}</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">Информация</a>
+                  <a class="dropdown-item" href="#">{{ Information }}</a>
                 </li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
-                  <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">О программе...</a>
+                  <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">{{ About_program }}</a>
                 </li>
               </ul>
             </li>
@@ -68,7 +68,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">{{ about_program }}</h5>
+        <h5 class="modal-title" id="exampleModalLabel">{{ text_about }}</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
