--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -4,7 +4,7 @@
     <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
       <div class="btn-group btn-group-sm" role="group">
         <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#configModal">
-          <i class="fa fa-user-plus"></i>
+          <i class="fa fa-plus-square"></i>
           <span>{{ button_add }}</span>
         </button>
         <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" data-bs-toggle="modal" data-bs-target="#configEditModal" onclick="confiEditModal()">
@@ -16,7 +16,7 @@
           <span>{{ button_copy }}</span>
         </button> #}
         <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="configDelete()">
-          <i class="fa fa-user-times"></i>
+          <i class="fa fa-minus-square"></i>
           <span>{{ button_delete }}</span>
         </button>
         <div class="btn-group btn-group-sm" role="group">
@@ -90,7 +90,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="usersModalLabel">{{ text_addusers }}</h5>
+        <h5 class="modal-title" id="usersModalLabel">{{ text_add_user }}</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
@@ -141,7 +141,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="userEditModalLabel">Редактировать пользователя</h5>
+        <h5 class="modal-title" id="userEditModalLabel">Edit user</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
@@ -192,7 +192,7 @@
   <div class="modal-dialog  modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Выбор роли</h5>
+        <h5 class="modal-title">Select roles</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">          
@@ -200,14 +200,14 @@
           <div class="btn-group btn-group-sm" role="group">
             <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="roleSelect()">
               <i class=""></i>
-              <span>Выбрать</span>
+              <span>Select</span>
             </button>    
           </div>
         </div>
         <div class="eva-form"></div>          
       </div>
       <div class="modal-footer">        
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{button_close}}</button>
       </div>
     </div>
   </div>
@@ -217,7 +217,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="roleModalLabel">Добавить роль</h5>
+        <h5 class="modal-title" id="roleModalLabel">Add Role</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
@@ -230,7 +230,7 @@
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" onclick="roleCreate()">{{ button_save }}</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{button_close}}</button>
       </div>
     </div>
   </div>
@@ -240,8 +240,8 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="configModalLabel">Добавить объект</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+        <h5 class="modal-title" id="configModalLabel">Add object</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form class="form" id="create-config-form">  
@@ -251,8 +251,8 @@
             {# <button class="btn btn-outline-secondary" type="button" onclick="config_edit_type()">...</button> #}
             <select type="text" name="type" value="" class="form-select form-control" id="input-type">
               <option selected>  </option>
-              <option value="Constant">Константа</option>
-              <option value="Reference">Справочник</option>              
+              <option value="Constant">{{text_constant}}</option>
+              <option value="Reference">{{text_reference}}</option>              
             </select>
           </div>         
           <label for="input-textId">Identifier:</label>
@@ -273,7 +273,7 @@
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" onclick="configCreate()">{{ button_save }}</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{button_close}}</button>
       </div>
     </div>
   </div>
