--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -146,7 +146,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
-        <form class="form" id="create-edit-form">
+        <form class="form" id="user-edit-form">
           <label for="input-edit-username">Name:</label>
           <div class="input-group">
             <input type="text" placeholder="Name" id="input-edit-username" class="form-control"/>
