--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -7,7 +7,7 @@
           <i class="fa fa-plus-square"></i>
           <span>{{ button_add }}</span>
         </button>
-        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" data-bs-toggle="modal" data-bs-target="#objectEditModal" onclick="objectEditModal()">
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="objectEditModal()">
           <i class="fa fa-edit"></i>
           <span>{{ button_edit }}</span>
         </button>
@@ -42,8 +42,8 @@
         <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#usersModal">
           <i class="fa fa-user-plus"></i>
           <span>{{ button_add }}</span>
-        </button>
-        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" data-bs-toggle="modal" data-bs-target="#userEditModal" onclick="userEditModal()">
+        </button>        
+        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="userEditModal()">
           <i class="fa fa-edit"></i>
           <span>{{ button_edit }}</span>
         </button>
