--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -280,13 +280,13 @@
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" onclick="configCreate()">{{ button_save }}</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{button_close}}</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">{{button_close}}</button>
       </div>
     </div>
   </div>
 </div>
 {# Modal Object Edit #}
-<div class="modal fade" id="objectEditModal" tabindex="0" aria-labelledby="objectEditModalLabel" aria-hidden="true">
+<div class="modal fade" id="objectEditModal" tabindex="-1" aria-labelledby="objectEditModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
