--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -2,6 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ home }}">{{ name }}</a>
     {% if logged %}
+      {% if mode %}
       <nav class="d-flex me-lg-5">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -60,6 +61,44 @@
           </ul>
         </div>
       </nav>
+      {% else %}
+      <nav class="d-flex me-lg-5">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="nav navbar-nav align-items-center gap-2" id="nav-tab" role="tablist">                                        
+            <li class="nav-item">
+              <a class="nav-link d-flex gap-1 align-items-center" aria-current="page" href="#">
+                <img src="{{ image }}" alt="logo" width="30" height="30" id="user-profile" class="img-circle" />
+                <span>{{ username }}</span>
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" href="#">{{ Help }}</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">{{ Information }}</a>
+                </li>
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                  <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">{{ About_program }}</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#"><i class="fa fa-cog"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ logout }}"><i class="fa fa-sign-out"></i></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      {% endif %}
     {% endif %}
   </div>
 </header>
