--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -10,9 +10,9 @@
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
             </div>
         {% endif %}
-        <form class="form-signin w-100 p-3 m-auto d-flex flex-column gap-3" action={{ action }} method="post" enctype="application/json">
+        <form class="form-signin w-100 p-3 m-auto d-flex flex-column gap-3" action="{{ action }}" method="post" enctype="application/json">
             <h2 class="h3 mb-3 font-weight-normal" style="color:#282c34; text-shadow:0px 4px 3px rgba(0,0,0,0.4),0px 8px 13px rgba(0,0,0,0.1),0px 18px 23px rgba(0,0,0,0.1);">
-                <img class="fa-spin" src={{ logo }} alt="logo" width="45" height="45">{{ text_login }}
+                <img class="fa-spin" src="{{ logo }}" alt="logo" width="45" height="45">{{ text_login }}
             </h2>
             <div class="form-group" style=" font-size: 18px">
                 <input type='radio' id='Developer' name='operation_mode' checked value='on'> <label for='Developer'>Developer</label>
@@ -23,7 +23,7 @@
                 <label for="input-username">{{ entry_username }}</label>
                 <div class="input-group gap-2">
                     <div class="input-group-text" for="input-username"><i class="fa fa-user"></i></div>                    
-                    <select type="text" name="username" value={{ username }} class="form-select form-control" id="input-username">
+                    <select type="text" name="username" value="{{ username }}" class="form-select form-control" id="input-username">
                         <option selected>  </option>
                     </select>
                 </div>
@@ -32,17 +32,17 @@
                 <label for="input-password">{{ entry_password }}</label>
                 <div class="input-group  gap-2">
                     <span class="input-group-text" id="btnGroupAddon2"><i class="fa fa-lock"></i></span>
-                    <input type="password" name="password" value={{ password }} placeholder={{ entry_password }} id="input-password" class="form-control" aria-describedby="btnGroupAddon2">
+                    <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" aria-describedby="btnGroupAddon2">
                 </div>
                 {% if forgotten %}
-                    <span class="help-block"><a href={{ forgotten }}>{{ text_forgotten }}</a></span>
+                    <span class="help-block"><a href="{{ forgotten }}">{{ text_forgotten }}</a></span>
                 {% endif %}
             </div>
             <div class="text-right">
                 <button type="submit" class="btn btn-primary"><i class="fa fa-rocket"></i> {{ button_login }}</button>
             </div>
             {% if redirect %}
-                <input type="hidden" name="redirect" value={{ redirect }} />
+                <input type="hidden" name="redirect" value="{{ redirect }}" />
             {% endif %}
         </form>
     </div>
