--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -266,6 +266,11 @@
           <div class="input-group input-group-sm">
             <input type="text" placeholder="" id="input-textId" class="form-control"/>
           </div>  
+          <label for="input-subsystem">Subsystem:</label>
+            <div class="input-group input-group-sm">
+            <input type="text" placeholder="0" id="input-subsystem" class="form-control"/>
+            <button class="btn btn-outline-secondary" type="button" onclick="objectEditSubsystem()">...</button>
+          </div> 
           <label for="input-typeId">Type Id:</label>
           <div class="input-group input-group-sm">
             <input type="text" placeholder="0" id="input-typeId" class="form-control"/>
@@ -323,3 +328,28 @@
     </div>
   </div>
 </div>
+{# Modal Edit Subsystem [4] #}
+<div class="modal modal-lg fade" id="editSubsystemModal" tabindex="-2" aria-labelledby="editSubsystemModalLabel" aria-hidden="true">
+  <div class="modal-dialog  modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Select subsystem</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+      </div>
+      <div class="modal-body">          
+        <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">          
+          <div class="btn-group btn-group-sm" role="group">
+            <button type="submit" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" data-bs-dismiss="modal" onclick="subsystemSelect()">
+              <i class=""></i>
+              <span>Select</span>
+            </button>    
+          </div>
+        </div>
+        <div class="eva-form"></div>          
+      </div>
+      <div class="modal-footer">        
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{button_close}}</button>
+      </div>
+    </div>
+  </div>
+</div> 
