--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="nav navbar-nav align-items-center gap-2" id="nav-tab" role="tablist">                              
             <li class="nav-item">
-                <a class="nav-link active"  href="" id="nav-config-tab" data-bs-toggle="tab" data-bs-target="#nav-config"  role="tab" aria-controls="nav-config" aria-selected="false">
+                <a class="nav-link active"  href="" id="nav-config-tab" data-bs-toggle="tab" data-bs-target="#nav-config"  role="tab" aria-controls="nav-config" aria-selected="false" onclick="showConfigTable()">
                   {{ text_config }}
                 </a>
             </li>       
@@ -56,7 +56,7 @@
               <a class="nav-link" aria-current="page" href="#"><i class="fa fa-cog"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ logout }}"><i class="fa fa-sign-out"></i></a>
+              <a class="nav-link" aria-current="page" href="{{ logout }}" onclick="logout()"><i class="fa fa-sign-out"></i></a>
             </li>
           </ul>
         </div>
