--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -7,7 +7,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">         
           <ul class="nav navbar-nav align-items-center gap-2" id="nav-tab" role="tablist">                              
             <li class="nav-item">
                 <a class="nav-link active"  href="" id="nav-config-tab" data-bs-toggle="tab" data-bs-target="#nav-config"  role="tab" aria-controls="nav-config" aria-selected="false" onclick="showConfigTable()">
@@ -67,7 +67,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="nav navbar-nav align-items-center gap-2" id="nav-tab" role="tablist">                                        
+          <ul class="nav navbar-nav align-items-center gap-2" id="eva-nav-tab" role="tablist">            
+            <div id="eva-gen">               
+            </div>   
             <li class="nav-item">
               <a class="nav-link d-flex gap-1 align-items-center" aria-current="page" href="#">
                 <img src="{{ image }}" alt="logo" width="30" height="30" id="user-profile" class="img-circle" />
