--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -68,8 +68,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="nav navbar-nav align-items-center gap-2" id="eva-nav-tab" role="tablist">            
-            <div id="eva-gen">               
-            </div>   
+            <ul class="nav navbar-nav" id="eva-gen">               
+            </ul>   
             <li class="nav-item">
               <a class="nav-link d-flex gap-1 align-items-center" aria-current="page" href="#">
                 <img src="{{ image }}" alt="logo" width="30" height="30" id="user-profile" class="img-circle" />
