--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -312,7 +312,7 @@
           </div>            
           <label for="input-edit-subsystem">Subsystem:</label>
           <div class="input-group input-group-sm">
-            <input id= "subsystem" type="text" placeholder="" id="input-edit-subsystem" class="form-control"/>
+            <input type="text" placeholder="" id="input-edit-subsystem" class="form-control"/>
             <button id= "subsystemBtn" class="btn btn-outline-secondary" type="button" onclick="objectEditSubsystem()">...</button>
           </div>           
           <label for="input-edit-typeId">Type Id:</label>
