--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -67,8 +67,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="nav navbar-nav align-items-center gap-2" id="eva-nav-tab" role="tablist">            
-            <ul class="nav navbar-nav" id="eva-gen">               
+          <ul class="nav navbar-nav align-items-center gap-2" role="tablist">            
+            <ul class="nav navbar-nav" id="eva-nav">               
             </ul>   
             <li class="nav-item">
               <a class="nav-link d-flex gap-1 align-items-center" aria-current="page" href="#">
