--- a/views/index.twig
+++ b/views/index.twig
@@ -6,7 +6,7 @@
         <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
         <title>EVA</title>            
         <script defer src="./common.js"></script>
-        <script defer src="./eva-app.js"></script>
+        <script async src="./eva-app.js"></script>
         <script defer src="./@popperjs/core/dist/umd/popper.min.js"></script>
         <script defer src="./js/bootstrap.min.js"></script>
         <link rel="icon" type="image/x-icon" href="{{ shortIcon }}">
